# dto-domain-data

./: README.md  container.py  main.py  pyproject.toml
api/: router.py  routes.py
api/routes/: jobs.py
data/: jobs.py
domain/: jobs.py
dtos/: jobs.py
repositories/: jobs_repository.py
repository/: jobs_repository.py
services/: jobs_service.py
