[project]
name = "dto-domain-data"
version = "0.0.1"
description = "A dalliance into DTOs with Pydantic"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dependency-injector>=4.42.0",
    "fastapi[standard]>=0.115.2",
    "pydantic>=2.9.2",
    "ruff>=0.6.9",
    "sqlalchemy>=2.0.36",
]
